crates/baml-bridge/tests/ui/as_enum_data_enum.rs
use baml_bridge::BamlType;

#[derive(BamlType)]
#[baml(as_enum)]
enum Bad {
    A { value: i64 },
}

fn main() {}
